# AmazonReviewScrapperAPI

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  amazon_review_api.py  api_server.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_api.py  test_flask_api.py
.github/workflows/: ci.yml  release.yml
tests/: test_api.py
